# ClionCmake

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/math/: CMakeLists.txt
src/math/src/: math.cpp  math.h
